--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "require": {
         "php": ">=5.6.4",
         "laravel/framework": "5.4.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "twbs/bootstrap": "4.0.0-beta"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -28,6 +29,7 @@
         }
     },
     "scripts": {
+        "pre-update-cmd": [],
         "post-root-package-install": [
             "php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
@@ -39,7 +41,7 @@
             "php artisan optimize"
         ],
         "post-update-cmd": [
-            "Illuminate\\Foundation\\ComposerScripts::postUpdate",
+            "php artisan clear-compiled",
             "php artisan optimize"
         ]
     },
